		available, and there is a areas file for some uplink, the area
		is automatic created and a areamgr request is sent to the 
		uplink to connect that area. The area is created with the
		defaults from the mailgroup.
		Experimental patch in mkftnhdr to create a To address in news
		articles where a Reply-To: header is present.
		It was not possible to disconnect file areas.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lots of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.
		For ISDN and POTS calls, mbtask now decides which tty to use,
		mbcico gets the tty to use as option on the commandline.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		Remove some obsolete code that is handled by mbtask.
		Added some debug logmessages in ttyio.

	mbout:
		The status display has now 9 digits for the outbound size.

	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.
		Added support for external message editor written by Redy.
		Doors are now passed the parameter to display a prompt after
		the door or return silently.
		Fixed lharc file return code to LHA.

	mbnewusr:
		New users have the default internal fullscreen editor.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.